# RainbowWave_system_controller

./: .gitignore  CMakeLists.txt
controller_code/: CMakeLists.txt  MAX30101.cpp  MAX30101.h  RA8875.cpp  RA8875.h  controller_main.cpp  spo2_algorithm.cpp  spo2_algorithm.h
